--- a/input.css
+++ b/input.css
@@ -30,7 +30,7 @@ body {
 }
 
 .cover-image{
-    background-image: url('/img/imgHeroBG.jpeg');
+    background-image: url('img/imgHeroBG.jpeg');
     background-repeat: no-repeat;
     background-position: center;
     top: 0;
@@ -87,7 +87,7 @@ body {
 
 .button-circled:hover{
     box-shadow: 2px 2px 10px 0 #ff0e1f, -2px -2px 10px 0 #ff0e1f;
-    cursor:url('/img/cursor.cur'), auto;
+    cursor:url('img/cursor.cur'), auto;
     
 }
 
@@ -171,7 +171,7 @@ body {
 }
 
 .grid-item:hover{
-    cursor:url('/img/cursor.cur'), auto;
+    cursor:url('img/cursor.cur'), auto;
     .text-wrap{
         transform:translateY(1px);
     }
@@ -213,7 +213,7 @@ body {
 .cene-card:hover{
 
     transform:translateY(-10px);
-    cursor:url('/img/cursor.cur'), auto;
+    cursor:url('img/cursor.cur'), auto;
 }
 
 .grid-item .btn-item,
@@ -227,7 +227,7 @@ body {
 .vip-wrap:hover,
 .ps5-wrap:hover,
 #tournament div{
-    cursor:url('/img/cursor.cur'), auto;
+    cursor:url('img/cursor.cur'), auto;
 }
 
 .vip-wrap a:hover,
