--- a/input.css
+++ b/input.css
@@ -239,6 +239,61 @@ a{
     font-weight: bold;
 }
 
+.oprema .grid-item:nth-of-type(1){
+    background-image:url('img/imgMonitor.jpg');
+}
+
+.oprema .grid-item:nth-of-type(2){
+    background-image:url('img/imgKomp.jpg');
+}
+
+.oprema .grid-item:nth-of-type(3){
+    background-image:url('img/ps5.png');
+}
+
+.oprema .grid-item:nth-of-type(4){
+    background-image:url('img/imgTastatura.jpg');
+}
+
+.oprema .grid-item:nth-of-type(5){
+    background-image:url('img/imgMis.jpg');
+}
+.oprema .grid-item:nth-of-type(6){
+    background-image:url('img/imgSluske.jpg');
+}
+
+.vip-wrap{
+    background-image: url('img/imgGamesBG.jpg');
+}
+
+.grid-item-img{
+    background-image: url('img/bgLoL.jpg');
+}
+
+.grid-item-img-2{
+    background-image: url('img/bgValorant.jpg');
+}
+
+.grid-item-img-3{
+    background-image: url('img/bgCS.jpg');
+}
+
+.grid-item-img-4{
+    background-image: url('img/bgFort.jpg');
+}
+
+.grid-item-img-5{
+    background-image: url('img/bgMarvel.jpg');
+}
+
+.grid-item-img-6{
+    background-image: url('img/bgDota.jpg');
+}
+
+.ps5-wrap{
+    background-image:url('img/psBG.jpg');
+}
+
 
 
 
